--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,21 @@
 {
-  "singleQuote": true
+   "arrowParens": "always",
+   "bracketSameLine": false,
+   "bracketSpacing": true,
+   "semi": true,
+   "experimentalTernaries": false,
+   "singleQuote": true,
+   "jsxSingleQuote": false,
+   "quoteProps": "as-needed",
+   "trailingComma": "all",
+   "singleAttributePerLine": false,
+   "htmlWhitespaceSensitivity": "css",
+   "vueIndentScriptAndStyle": false,
+   "proseWrap": "preserve",
+   "insertPragma": false,
+   "requirePragma": false,
+   "tabWidth": 2,
+   "useTabs": false,
+   "embeddedLanguageFormatting": "auto",
+   "printWidth": 120
 }
