--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Learning Nodejs",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon --inspect ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/kiethohoai/nodejs-npm/issues"
   },
-  "homepage": "https://github.com/kiethohoai/nodejs-npm#readme"
+  "homepage": "https://github.com/kiethohoai/nodejs-npm#readme",
+  "dependencies": {
+    "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
